manifests/nextcloud/mariadb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  ports:
  - name: db
    port: 3306
    targetPort: db
  selector:
    app: mariadb

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: mariadb
#   namespace: nextcloud
# data:
#   # openssl rand -base64 32 | tr -d "\n" | base64
#   mysql-root-password:

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.4
        # FIXME https://github.com/nextcloud/docker/blob/master/.examples/docker-compose/with-nginx-proxy/mariadb/apache/docker-compose.yml#L6
        ports:
        - name: db
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mariadb-data
