manifests/nextcloud/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis

# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: redis
#   namespace: nextcloud
#   labels:
#     app: nextcloud
# data:
#   redis-config: |
#     maxmemory 2mb
#     maxmemory-policy allkeys-lru

---
# FIXME
# 1:M 09 Dec 2018 13:55:51.142 # WARNING: The TCP backlog setting of 511 cannot be enforced because /proc/sys/net/core/somaxconn is set to the lower value of 128.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5.0-alpine3.8
        ports:
        - name: redis
          containerPort: 6379
        # resources:
        #   limits:
        #     cpu: "0.1"
        volumeMounts:
        - mountPath: /redis-data
          name: data
        # - mountPath: /redis-master
        #   name: config
      volumes:
        - name: data
          emptyDir: {}
        # - name: config
        #   configMap:
        #     name: example-redis-config
        #     items:
        #     - key: redis-config
        #       path: redis.conf
